fix overflow scroll on sidebar

--- a/BlazarUI/app/stylus/layout.styl
+++ b/BlazarUI/app/stylus/layout.styl
@@ -21,14 +21,12 @@ body
 
 .sidebar
   position fixed
+  overflow scroll
+  top 0
   width: $layout-offset-md
-  top 50px
-  bottom 0
-  overflow hidden
+  padding: 80px 20px 0 20px
   border-right 1px solid $gray
   background-color $offwhite
-  padding 20px
-  overflow scroll
 
 .page-content
   position relative
